--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
+dist
+cabal-dev
 *.o
 *.hi
-VHasSandBox/WordRegistry
-
+*.chi
+*.chs.h
+.virtualenv
+.hsenv
+.cabal-sandbox/
+cabal.sandbox.config
+cabal.config
+tmp/
